// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover on desktop renders correctly when open is true 1`] = `
<div>
  <span
    class="np-popover"
  >
    <span
      class="d-inline-block"
    >
      <button
        type="button"
      >
        Open
      </button>
      <span
        class="sr-only"
        role="status"
      >
        title
        content
      </span>
    </span>
    <div
      class="np-size-swapper d-flex"
      style="visibility: visible;"
    >
      <div
        class="np-panel np-panel--open"
        data-popper-escaped="true"
        data-popper-placement="bottom"
        data-popper-reference-hidden="true"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 16px);"
      >
        <div
          class="np-panel__content"
        >
          <div
            aria-hidden="false"
            class="np-popover__content"
            role="tooltip"
          >
            <div
              class="h5"
            >
              title
            </div>
            content
          </div>
          <div
            class="np-panel__arrow"
            style="position: absolute; left: 0px; transform: translate(5px, 0px);"
          />
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`Popover on mobile renders 1`] = `
<div>
  <span
    class="np-popover"
  >
    <span
      class="d-inline-block"
    >
      <button
        type="button"
      >
        Open
      </button>
      <span
        class="sr-only"
        role="status"
      >
        title
        content
      </span>
    </span>
    <div
      class="np-size-swapper d-flex"
      style="visibility: visible;"
    >
      <div
        class="np-bottom-sheet"
      >
        <div
          aria-hidden="false"
          class="np-popover__content"
          role="tooltip"
        >
          <div
            class="h5"
          >
            title
          </div>
          content
        </div>
      </div>
    </div>
  </span>
</div>
`;
